erDiagram
    %% Better-Auth managed entities
    USERS ||--o{ SESSIONS : has
    USERS ||--o{ ACCOUNTS : has
    USERS ||--o{ MEMBERS : has

    %% Organization structure
    ORGANIZATIONS ||--o{ MEMBERS : has
    ORGANIZATIONS ||--o{ INVITATIONS : sends
    ORGANIZATIONS ||--o{ SUBSCRIPTIONS : has
    ORGANIZATIONS ||--o{ PROJECTS : owns

    %% Project structure
    PROJECTS ||--o{ PLANS : has
    PLANS ||--o{ PLAN_UPLOADS : has_versions
    PLAN_UPLOADS ||--o{ PLAN_SHEETS : has
    PLAN_UPLOADS ||--o{ PROCESSING_JOBS : tracks
    PLAN_UPLOADS ||--o{ ANNOTATIONS : has
    PROJECTS ||--o{ MEDIA : has

    %% Sessions track active organization
    SESSIONS }o--|| ORGANIZATIONS : active_org

    %% Better-Auth Core Tables
    USERS {
        string id PK
        string name
        string email UK
        boolean emailVerified
        string image
        timestamp createdAt
        timestamp updatedAt
    }

    SESSIONS {
        string id PK
        timestamp expiresAt
        string token UK
        timestamp createdAt
        timestamp updatedAt
        string ipAddress
        string userAgent
        string userId FK
        string activeOrganizationId FK
    }

    ACCOUNTS {
        string id PK
        string accountId
        string providerId "google|microsoft"
        string userId FK
        string accessToken
        string refreshToken
        string idToken
        timestamp accessTokenExpiresAt
        timestamp refreshTokenExpiresAt
        string scope
        timestamp createdAt
        timestamp updatedAt
    }

    VERIFICATIONS {
        string id PK
        string identifier
        string value
        timestamp expiresAt
        timestamp createdAt
        timestamp updatedAt
    }

    %% Organization Tables
    ORGANIZATIONS {
        string id PK
        string name
        string slug UK
        string logo
        timestamp createdAt
        timestamp deletedAt "soft delete"
        json metadata "business info"
    }

    MEMBERS {
        string id PK
        string organizationId FK
        string userId FK
        string role "owner|admin|member"
        timestamp createdAt
    }

    INVITATIONS {
        string id PK
        string organizationId FK
        string email
        string role
        string status "pending|accepted|rejected"
        timestamp expiresAt
        string inviterId FK
        timestamp createdAt
    }

    %% Subscription Tables (Polar Integration)
    SUBSCRIPTIONS {
        string id PK
        string polarSubscriptionId UK
        string organizationId FK
        string plan "trial|pro|enterprise"
        string status "active|canceled|past_due"
        timestamp startDate
        timestamp endDate
        int seats
        timestamp trialEndsAt
        timestamp currentPeriodEndsAt
        timestamp createdAt
        timestamp updatedAt
    }

    %% Project Management
    PROJECTS {
        string id PK
        string name
        string description
        string organizationId FK
        timestamp createdAt
        timestamp updatedAt
    }

    PLANS {
        string id PK
        string projectId FK
        string name
        string description
        timestamp createdAt
        timestamp updatedAt
    }

    PLAN_UPLOADS {
        string id PK
        string uploadId UK "Unique per upload for versioning"
        string planId FK
        string filePath "R2 path with uploadId"
        string fileType "pdf|dwg|etc"
        integer fileSize
        boolean isActive "Which version is active"
        string uploadedBy FK
        timestamp uploadedAt
        timestamp createdAt
    }

    PROCESSING_JOBS {
        string id PK
        string uploadId FK "References plan_uploads.uploadId"
        string planId FK
        string organizationId FK
        string projectId FK
        string pdfPath "R2 path to original PDF"
        string status "pending|processing|complete|failed"
        integer totalPages
        integer completedPages
        string failedPages "JSON array"
        integer progress "0-100"
        timestamp startedAt
        timestamp completedAt
        string lastError
        timestamp createdAt
        timestamp updatedAt
    }

    PLAN_SHEETS {
        string id PK
        string uploadId FK "References plan_uploads.uploadId"
        string planId FK
        integer sheetNumber "0-indexed"
        string sheetKey "R2 path to sheet PDF"
        integer sheetSize
        string status "pending|processing|ready|failed"
        integer tileCount
        timestamp processingStartedAt
        timestamp processingCompletedAt
        string errorMessage
        timestamp createdAt
    }

    MEDIA {
        string id PK
        string projectId FK
        string file_path
        string media_type "photo|video|audio"
        timestamp uploadedAt
    }

    ANNOTATIONS {
        string id PK
        string uploadId FK "References plan_uploads.uploadId for versioning"
        string planId FK
        integer sheetNumber
        string userId FK
        string type "marker|polygon|line|text|measurement"
        string data "JSON: coordinates and properties"
        string content "Text content for text annotations"
        string color
        integer pageNumber
        string createdBy FK
        timestamp createdAt
    }